# VeritySpec

./: .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  UNITY_AI.md  pyproject.toml  repository-metadata.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
docs/: accessibility-pack.md  adr-template.md  agent-context-generation.md  architecture-decision-records.md  branching.md  ci.md  cli-command-modules.md  compliance-pack.md  content-pack.md  contract-intelligence.md  cross-workspace-dependencies.md  deployment-pack.md  downstream-ai-adapter-drift.md  downstream-ci-profile-artifacts.md  downstream-ci.md  economy-pack.md  engine-full-lifecycle-support.md  engine-portfolio-compatibility.md  engine-product-delivery-packs.md  evidence-pack.md  external-pack-review-checklist.md  fixture-refresh.md  game-assets-pack.md  game-core-pack.md  gameplay-pack.md  generators.md  godot-pack.md  golden-fixture-refresh-automation-plan.md  graph-checks.md  installed-pack-compatibility-metadata.md  lifecycle-readiness-fixture-plan.md  liveops-pack.md  migration-report-schema.md  mobile-pack.md  observability-pack.md  official-extension-compatibility-fixtures.md  pack-scaffold-fixtures.md  packs.md  portfolio-report-json-contract-plan.md  portfolio-validation.md  (+101 more)
tests/: test_agent_governance_docs.py  test_cli.py  test_cli_command_modules_doc.py  test_contribution_guidance.py  test_cross_workspace_dependencies_doc.py  test_downstream_templates.py  (+17 more)
(+434 files in other folders)
