[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verityspec"
version = "0.19.0"
description = "Executable product contracts for humans, tools, and agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Jayson Furr" }
]
keywords = [
  "product-specification",
  "json-schema",
  "contracts",
  "openapi",
  "asyncapi",
  "cli",
  "validation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "jsonschema>=4.18"
]

[project.scripts]
verity = "verityspec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
verityspec = ["packs/**/*.json", "schemas/*.json"]
